--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-header bg-primary text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-chart-line me-2"></i> Hidden Markov Model Stock Market Analyzer
+                    <i class="fas fa-chart-line me-2"></i> Hidden devops
                 </h4>
             </div>
             <div class="card-body">
